--- a/qt_opencv/doc/1.opencv与qt简介.md
+++ b/qt_opencv/doc/1.opencv与qt简介.md
@@ -24,7 +24,7 @@
 
    项目结构如图所示，
 
-   ![img](/Users/colin/workSpace/realzhangm/play/qt_opencv/doc/assets/image-20181102175508779.tiff)
+   ![img](./assets/1-1.png)
 
 2. 将opencv的库路径增加到hello_qt项目中，以便编译程序时让IDE找到opencv。
 
@@ -43,7 +43,7 @@
 
 如图
 
-![img](/Users/colin/workSpace/realzhangm/play/qt_opencv/doc/assets/image-20181102180207717.tiff)
+![img](./assets/1-2.png)
 
 3. 编写代码
 
@@ -71,6 +71,6 @@ int main(int argc, char *argv[])
 
 4. 直接在Qt Creater 中运行程序。程序正确运行了，说明开发环境已经👌，接下来就可以愉快的编写程序了。
 
-   ![img](/Users/colin/workSpace/realzhangm/play/qt_opencv/doc/assets/image-20181102181032237.tiff)
+   ![img](./assets/1-3.png)
 
 
