--- a/qt_opencv/doc/1.opencv与qt简介.md
+++ b/qt_opencv/doc/1.opencv与qt简介.md
@@ -4,7 +4,7 @@
 
 
 
-## Opencv简介
+## OpenCV简介
 
 
 
@@ -12,13 +12,13 @@
 
 
 
-## 安装Opencv
+## 安装OpenCV
 
 
 
 ## 测试
 
-通过以前的步骤，我们已经将Qt和Opencv库安装到了电脑中，下面就通过一个示例测试一下安装是否成功，并测试第一个例子。
+通过以前的步骤，我们已经将Qt和OpenCV库安装到了电脑中，下面就通过一个示例测试一下安装是否成功，并测试第一个例子。
 
 1. 在qt_creater中新建一个项目，起名叫做hello_qt项目。
 
@@ -26,7 +26,7 @@
 
    ![img](./assets/1-1.png)
 
-2. 将opencv的库路径增加到hello_qt项目中，以便编译程序时让IDE找到opencv。
+2. 将OpenCV的库路径增加到hello_qt项目中，以便编译程序时让IDE找到OpenCV。
 
    首先，使用pkg-config
 
@@ -39,7 +39,7 @@
 
 提取上面的输出，写入到hello_qt.pro文件中。
 
-​	即，将opencv的头文件目录追加给 `INCLUDEPATH`  ， opencv的库目录和opencv的各个库追加给`LIBS`。写入hello_qt.pro文件的末尾。
+​	即，将OpenCV的头文件目录追加给 `INCLUDEPATH`  ， OpenCV的库目录和OpenCV的各个库追加给`LIBS`。写入hello_qt.pro文件的末尾。
 
 如图
 
