--- a/qt_opencv/doc/1.opencv与qt简介.md
+++ b/qt_opencv/doc/1.opencv与qt简介.md
@@ -24,7 +24,7 @@
 
    项目结构如图所示，
 
-   ![img](./assets/1-1.png)
+   ![img](./assets/1-1.png){: class=callout }
 
 2. 将OpenCV的库路径增加到hello_qt项目中，以便编译程序时让IDE找到OpenCV。
 
